--- a/index.html
+++ b/index.html
@@ -18,14 +18,74 @@
     />
   </head>
 
-  <body class="">
+  <body>
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a
+          class="navbar-brand order-1 mr-0"
+          href="https://www.teamtreehouse.com"
+          target="_blank"
+          >Presented by Treehouse</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#home"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#speakers">Speakers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#schedule">Schedule</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- /.navbar -->
+
+    <!-- jumbotron -->
+    <div class="jumbotron jumbotron-fluid bg-info text-white">
+      <div class="container text-sm-center pt-5">
+        <h1 class="display-2">Full Stack Conf</h1>
+        <p class="lead">A One-day Conference About All Things Javascript.</p>
+        <div class="btn-group mt-4" role="group" aria-label="Callout buttons">
+          <button type="button" class="btn btn-primary btn-lg">
+            Register Now
+          </button>
+          <a class="btn btn-light btn-lg" href="#speakers">See Speakers</a>
+        </div>
+      </div>
+    </div>
+    <!-- /.jumbotron -->
 
     <div class="container pt-4">
       <!-- about -->
       <div class="row">
         <div class="col-lg order-lg-2">
           <h3 class="mb-4">About Full Stack Conf</h3>
-          <img class="mb-4 img-fluid rounded d-none d-sm-block" src="img/pdx.jpg" alt="Portland">
+          <img
+            class="mb-4 img-fluid rounded d-none d-sm-block"
+            src="img/pdx.jpg"
+            alt="Portland"
+          />
           <p>
             The beautiful city of Portland, Oregon will be the host city for
             Full Stack Conf!
@@ -68,7 +128,9 @@
       <!-- /.about -->
 
       <!-- speakers -->
-      <h1 class="display-4 text-center my-5 text-muted">Speakers</h1>
+      <h1 class="display-4 text-center my-5 text-muted" id="speakers">
+        Speakers
+      </h1>
       [speaker bios go here]
       <!-- /.speaker -->
 
@@ -77,29 +139,98 @@
       [conference schedule goes here]
       <!-- /.schedule -->
 
-      <!-- signup form -->
-<hr>
-<div class="row py-4 text-muted">
-  <div class="col-md col-xl-5">
-    <p><strong>About Treehouse</strong></p>
-    <p>Treehouse brings affordable technology education to people everywhere to help them achieve their dreams and change the world.</p>
-  </div>
-  <div class="col-md col-xl-5 ml-auto">
-    <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
-    <div class="input-group">
-      <input type="text" class="form-control" placeholder="Email">
-      <span class="input-group-btn">
-        <button class="btn btn-primary" type="button">Sign up</button>
-      </span>
-    </div>
-  </div>
-</div>
-<hr><!-- /signup form -->
+      <!-- callout button -->
+      <button
+        type="button"
+        class="btn btn-outline-info btn-lg d-block mx-auto my-5"
+      >
+        Don't Miss Out, Register Now!
+      </button>
 
+      <!-- /.callout button -->
+
+      <!-- signup form -->
+      <hr />
+      <div class="row py-4 text-muted">
+        <div class="col-md col-xl-5">
+          <p><strong>About Treehouse</strong></p>
+          <p>
+            Treehouse brings affordable technology education to people
+            everywhere to help them achieve their dreams and change the world.
+          </p>
+        </div>
+        <div class="col-md col-xl-5 ml-auto">
+          <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Email" />
+            <span class="input-group-btn">
+              <button class="btn btn-primary" type="button">Sign up</button>
+            </span>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <!-- /signup form -->
+
+      <!-- footer  -->
+      <!-- footer -->
+      <div class="row py-3">
+        <div class="col-md-7">
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Community</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Tracks</a>
+            </li>
+            <li class="nav-item">
+              <!-- Example split danger button -->
+              <div class="btn-group dropup">
+                <button type="button" class="btn btn-outline-secondary">Other Confs</button>
+                <button
+                  type="button"
+                  class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">CSS Conf</a>
+                  <a class="dropdown-item" href="#">Python Conf</a>
+                  <a class="dropdown-item" href="#">Java Conf</a>
+                  <a class="dropdown-item" href="#">Swift Conf</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md text-md-right">
+          <small>&copy; 2017 Full Stack Conf &amp; Treehouse</small>
+        </div>
+      </div>
+      <!-- /footer -->
+      <!-- /.footer -->
     </div>
     <!-- /.container -->
 
-
-    
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
